--- a/views/city.erb
+++ b/views/city.erb
@@ -9,8 +9,9 @@
 <div class="row justify-content-md-center">
   <div class="col-md-6">
     <h1><%=@name%></h1>
-    <form class="" action="/city" method="post">
+    <form class="" action="/city/update/<%= @id %>" method="post">
       <div class="form-group">
+        <input name="_method" type="hidden" value="patch">
         <label for="name">Rename the city:</label>
         <input class="form-control" type="text" name="name" autofocus="autofocus" required>
       </div>
