--- a/views/city.erb
+++ b/views/city.erb
@@ -8,14 +8,14 @@
 
 <div class="row justify-content-md-center">
   <div class="col-md-6">
-    <h1><%=@name%></h1>
-    <form class="" action="/city/update/<%= @id %>" method="post">
+    <h1><%=@city.name%></h1>
+    <form class="" action="/city/update/<%= @city.id %>" method="post">
+      <input name="_method" type="hidden" value="patch">
       <div class="form-group">
-        <input name="_method" type="hidden" value="patch">
         <label for="name">Rename the city:</label>
         <input class="form-control" type="text" name="name" autofocus="autofocus" required>
       </div>
       <button type="submit" class= 'btn btn-success btn-block'>Update City</button>
     </form>
   </div>
-</div><br>
+</div>
