add user interface and styling

--- a/views/city.erb
+++ b/views/city.erb
@@ -16,6 +16,7 @@
         <input class="form-control" type="text" name="name" autofocus="autofocus" required>
       </div>
       <button type="submit" class= 'btn btn-success btn-block'>Update City</button>
+      <a href="/admin"<button class= 'btn btn-block btn-info'>Go Back</button></a>
     </form>
   </div>
 </div>
