--- a/views/route.erb
+++ b/views/route.erb
@@ -40,6 +40,7 @@
         <input class='form-control' type="datetime-local" name="time">
       </div>
       <button type="submit" class= 'btn btn-success btn-block'>Update Route</button>
+      <a href="/admin"<button class= 'btn btn-block btn-info'>Go Back</button></a>
     </form>
   </div>
 </div>
