--- a/views/train.erb
+++ b/views/train.erb
@@ -20,6 +20,7 @@
         <input class="form-control" type="text" name="color" autofocus="autofocus" required>
       </div>
       <button type="submit" class= 'btn btn-success btn-block'>Update Train</button>
+      <a href="/admin"<button class= 'btn btn-block btn-info'>Go Back</button></a>
     </form>
   </div>
 </div>
