--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,27 @@
+html {
+  overflow-y: scroll;
+}
+nav {
+  margin-bottom: 16px;
+}
 a:hover {
   text-decoration: none;
 }
 .alert {
   text-align: center;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+    clear:both;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    color: white;
+}
+#link-text {
+  color: inherit;
+}
+#main {
+  margin-bottom: 60px;
 }
