--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,4 +1,3 @@
-
 <div class="row justify-content-md-center">
   <div class="col-md-6">
     <div class="alert alert-success">
@@ -6,6 +5,16 @@
     </div>
   </div>
 </div>
+<% if @error %>
+<div class="row justify-content-md-center">
+  <div class="col-md-6">
+    <div class="alert alert-danger">
+      <h3>Cannot Delete <%= @conflict %>. It is part of a Route.</h3>
+    </div>
+  </div>
+</div>
+<% end %>
+
 <div class="row justify-content-md-center">
   <div class="col-md-6">
     <form class="" action="/city" method="post">
@@ -110,7 +119,7 @@
           </div>
           <div class="form-group">
             <label for "time">Select a time</label>
-            <input class='form-control' type="datetime-local" name="time">
+            <input class='form-control' type="datetime-local" name="time" required>
           </div>
           <button type="submit" class= 'btn btn-success btn-block'>Create a new Route</button>
         </form>
